--- a/MobileShop/MobileShop.csproj
+++ b/MobileShop/MobileShop.csproj
@@ -12,4 +12,9 @@
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.1.0.697729" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\" />
+    <Folder Include="ViewModels\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
 </Project>
