--- a/Shop.Core/ShopFramework.csproj
+++ b/Shop.Core/ShopFramework.csproj
@@ -12,4 +12,7 @@
   <ItemGroup>
     <Compile Remove="Class1.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.Text.Encoding.CodePages" Version="4.5.0" />
+  </ItemGroup>
 </Project>
