--- a/MobileShop/MobileShop.csproj
+++ b/MobileShop/MobileShop.csproj
@@ -11,17 +11,33 @@
 
   <ItemGroup>
     <PackageReference Include="Xamarin.Forms" Version="3.2.0.839982" />
+    <PackageReference Include="Behaviors.XamarinForms" Version="3.0.1" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Pages\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Services\" />
     <Folder Include="ViewModels\Base\" />
+    <Folder Include="Services\Navigation\" />
+    <Folder Include="Behaviors\" />
+    <Folder Include="Behaviors\Base\" />
+    <Folder Include="Effects\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Shop.Core\ShopFramework.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="ViewModels\MainViewModel.cs" />
+    <Compile Remove="Pages\LoaderPage.xaml.cs" />
+    <Compile Remove="Services\SettingsService.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Pages\SplashPage.xaml.cs">
+      <DependentUpon>SplashPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Update="Pages\CustomNavigationPage.xaml.cs">
+      <DependentUpon>CustomNavigationPage.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
 </Project>
